# clipstash

./: .gitignore  Cargo.toml  data.db-shm  data.db-wal
migrations/: 20210624130929_initial.sql
src/lib/: mod.rs
src/lib/data/: mod.rs  model.rs  query.rs
src/lib/domain/: time.rs
src/lib/domain/clip/: mod.rs
src/lib/domain/clip/field/: clip_id.rs  content.rs  expires.rs  hits.rs  mod.rs  password.rs  shortcode.rs  title.rs
src/lib/service/: action.rs  ask.rs  mod.rs
src/lib/web/: ctx.rs  http.rs  mod.rs  renderer.rs
templates/: footer.hbs
